Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-67823

Busy loop in QAspectThread while widget containing Scene3D is not visible

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.11.2
    • 5.9, 5.10.1, 5.11.1
    • Qt3D
    • None

      When using the Scene3D QML component in a QQuickWidget, QAspectThread will get in a busy loop while the containing widget is not visible. This does not seem to be related to OnDemand rendering.

      The attached example shows the problem. QAspectThread consumes CPU in a loop until the checkbox is clicked, making QQuickWidget visible.

        For Gerrit Dashboard: QTBUG-67823
        # Subject Branch Project Status CR V

            mauro.persano Mauro Persano
            mauro.persano Mauro Persano
            Votes:
            1 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes