Avoid busy loop in QAspectManager while simulation loop is not started

After QAspectThread starts, it gets in a busy loop until
QAspectManager::enterSimulationLoop is called.

Make the aspect thread's main loop block on QEventLoop::processEvents
until it's told to start the simulation loop.

Task-number: QTBUG-67823
Change-Id: I3daac20b65227787c42907d53c11609e1a87ea85
Reviewed-by: Paul Lemire <paul.lemire@kdab.com>
Reviewed-by: Sean Harmer <sean.harmer@kdab.com>